--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 
 <body>
-    <a href="Object.allKeys.html">Object.allkeys</a>
+    <a href="ObjectAllKeys/Object.allKeys.html">Object.allkeys</a>
+    <a href="RandomColorsVuejs/index.html">Random Colors generatro in Vuejs</a>
     </body>
 </htlm>
