--- a/RandomColorsVuejs/index.html
+++ b/RandomColorsVuejs/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>scsstry</title>
-  </head>
-  <body>
+    <title>Random Color Vue js</title>
+</head>
+
+<body>
     <div id="app"></div>
     <script src="dist/build.js"></script>
-    <link href="dist/main.bundle.css" rel="stylesheet" type="text/css">
-  </body>
+    <link href="dist/dist/main.bundle.css" rel="stylesheet" type="text/css">
+    <audio controls>
+      <source src="jimmy.mp3" type="audio/mp3">
+      <p>Your browser doesn't support HTML5 audio. Here is a <a href="jimmy.mp3">link to the audio</a> instead.</p>
+    </audio>
+    <cite>Audio credits: "Jimmy Jimmy Aaja Aaja" from the movie <i>Disco Dancer</i>
+        <br/>Music by:	Bappi Lahiri
+        <br/>Production: B. Subhash Movie Unit
+    </cite>
+</body>
+
 </html>
