corrected link path

--- a/RandomColorsVuejs/index.html
+++ b/RandomColorsVuejs/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="app"></div>
     <script src="dist/build.js"></script>
-    <link href="dist/dist/main.bundle.css" rel="stylesheet" type="text/css">
+    <link href="dist/main.bundle.css" rel="stylesheet" type="text/css">
     <audio controls>
       <source src="jimmy.mp3" type="audio/mp3">
       <p>Your browser doesn't support HTML5 audio. Here is a <a href="jimmy.mp3">link to the audio</a> instead.</p>
